--- a/cloudnativedemo/Droid/Properties/AndroidManifest.xml
+++ b/cloudnativedemo/Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.geertvdc.cloudnativedemo">
 	<uses-sdk android:minSdkVersion="15" />
+	<uses-permission android:name="android.permission.LOCATION_HARDWARE" />
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 	<application android:label="CloudNativeDemo">
+        <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyC05ecNbUUvMq7kZYPpYvZvh2LjDmlLnrM"/>
 	</application>
+
 </manifest>
