--- a/cloudnativedemo/Droid/packages.config
+++ b/cloudnativedemo/Droid/packages.config
@@ -18,8 +18,11 @@
   <package id="Xamarin.Android.Support.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Build.Download" version="0.4.3" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms" version="2.3.4.247" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms.GoogleMaps" version="2.1.0" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms.GoogleMaps.Bindings" version="1.0.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Forms.Maps" version="2.3.4.247" targetFramework="monoandroid71" />
-  <package id="Xamarin.GooglePlayServices.Base" version="29.0.0.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.GooglePlayServices.Basement" version="29.0.0.1" targetFramework="monoandroid71" />
-  <package id="Xamarin.GooglePlayServices.Maps" version="29.0.0.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Base" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Basement" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Maps" version="42.1021.1" targetFramework="monoandroid71" />
+  <package id="Xamarin.GooglePlayServices.Tasks" version="42.1021.1" targetFramework="monoandroid71" />
 </packages>
